<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="@dimen/default_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/i2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_shoes_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        style="@style/title_DefaultTextStyle"
        android:layout_marginLeft="@dimen/default_margin"/>


    <ImageView
        android:id="@+id/clobtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginRight="@dimen/default_margin"/>


    <TextView
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/popup_shoes_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle_DefaultTextStyle"
        android:text="@string/popup_shoes_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"/>


    <TextView
        android:id="@+id/popup_shoes_description_subtitle"
        android:textColor="@color/Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_description_title" />

    <TextView
        android:id="@+id/popup_shoes_color_title"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        style="@style/subtitle_DefaultTextStyle"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_color_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_description_subtitle" />

    <TextView
        android:textColor="@color/Grey"
        android:id="@+id/popup_shoes_color_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_color_subtitle"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_color_title"/>


    <TextView
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/popup_shoes_size_title"
        android:layout_width="wrap_content"
        style="@style/subtitle_DefaultTextStyle"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_size_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_color_subtitle"/>

    <TextView
        android:id="@+id/popup_shoes_size_subtitle"
        android:layout_width="wrap_content"
        android:textColor="@color/Grey"
        android:layout_height="wrap_content"
        android:text="@string/popup_shoes_size_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_shoes_size_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_size_title"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_marginTop="50dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_shoes_size_subtitle"/>


    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/ic_unlike"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_unlike"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"/>

</androidx.constraintlayout.widget.ConstraintLayout>